--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 <body>
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
-        <div class="hambuger"></div> </div>
-    <div class="menu">
-        <div>
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
             <div>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                <div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
